--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </article>
     </section>
     <section id="details">
-      <p>The Surgery Center of York Road provides care in multiple medical specialties:</p>
+      <p class="text-compressed">The Surgery Center of York Road provides care in multiple medical specialties:</p>
       <ul>
         <li>Vascular Surgery</li>
         <li>Plastic&#47;Reconstructive</li>
@@ -54,13 +54,13 @@
         <li>Gynecology</li>
         <li>General Surgery</li>
       </ul>
-      <p>The Board Certified surgeons provide patients with high quality care in a safe 
+      <p class="text-compressed">The Board Certified surgeons provide patients with high quality care in a safe 
         environment.  Our Nursing clinical staff put the patient first, with personalized 
         care for each patient. Anesthesia services are provided by board certified 
         Anesthesiologists specializing in outpatient anesthesia.  In addition, our modern 
         recovery room is designed with your personal comfort and safety in mind. 
       </p>
-      <p>Located in Lutherville, MD right off the 695 beltway, the Surgery Center of York Road is easily accessible for patient and family convenience. 
+      <p class="text-compressed">Located in Lutherville, MD right off the 695 beltway, the Surgery Center of York Road is easily accessible for patient and family convenience. 
       </p>
     </section>
     <section id="hours-and-location">
