--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="hours-info">
         <div>
           <h3>Hours</h3>
-          <div>Sat 7:30-1pm</div>
+          <div>Mon - Fri  7 AM – 4 PM</div>
         </div>
         <div>
           <h3>Address</h3>
@@ -94,7 +94,7 @@
       </div>
     </section>
     <section id="vvi-section">
-        <a href="#" class="feature-link">
+        <a href="https://www.vvicm.com/" class="feature-link">
       <div class="feature-description">
         The Vein & Vascular Institute is housed within the Surgery Center of York Road 
         and offers comprehensive treatment of all facets of vascular disease. Click to 
