--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
 <head>
   <meta charset="utf-8">
 
-  <title>Homepage | Surgery Center of York Road</title>
-  <meta name="description" content="Homepage of the Surgery Center of York Road is a state 
-  of the art outpatient facility featuring the most advanced technologies available in a 
-  personalized setting. ">
+  <title>Surgery Center of York Road: Sate of the Art Surgical Care</title>
+  <meta name="description" content="Get more info about our state of the art outpatient facility 
+  featuring the most advanced technologies available in a modern, comfortable, caring setting.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
