--- a/index.html
+++ b/index.html
@@ -31,9 +31,28 @@
   </div>
   <header>
     <img id="sc-logo" src="./img/logos/surgery-logo.png" alt="Surgery Center Logo">
-        <div class="contact-callout">
-            <div>Lutherville, MD <a class="phone-link" href="tel:667-206-2343">(667) 206-2343</a></div>
-          </div>
+          <div class="nav-container">
+            <input id="burger" type="checkbox" />
+            <label for="burger">
+                <span></span>
+                <span></span>
+                <span></span>
+            </label>
+            <div class="nav-wrapper">
+              <img id="sc-logo" src="./img/logos/surgery-logo.png" alt="Vein &amp; Vascular
+              Institute of
+              Central Maryland">
+              <div class="contact-callout">
+                <div>Lutherville, MD <a class="phone-link" href="tel:667-206-2343">(667) 206-2343</a></div>
+              </div>
+        <nav>
+          <a href="https://www.vvicm.com/">Vein &amp; Vascular Institute</a>
+          <a href="https://www.vvicm.com/pages/laser-center.html">Cosmetic Laser Center</a>
+          <a href="#hours-and-location" onclick="scrollToSection('hours-and-location')">Contact</a>
+        </nav>
+            </div>
+  
+    </div>
   </header>
   <main>
     <section id="introduction">
