added consistent menu items and styling to surgery index page

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
         <nav>
           <a href="https://www.vvicm.com/">Vein &amp; Vascular Institute</a>
           <a href="https://www.vvicm.com/pages/laser-center.html">Cosmetic Laser Center</a>
+          <a class='current-page' href="#">Surgery Center</a>
           <a href="#hours-and-location" onclick="scrollToSection('hours-and-location')">Contact</a>
         </nav>
             </div>
