fixed menu animation artifacts when moving through 980px breakpoint on surgery page

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <span></span>
             </label>
             <div class="nav-wrapper">
-              <img id="sc-logo" src="./img/logos/surgery-logo.png" alt="Vein &amp; Vascular
+              <img id="hamburger-sc-logo" src="./img/logos/surgery-logo.png" alt="Vein &amp; Vascular
               Institute of
               Central Maryland">
               <div class="contact-callout">
