changed content on vvi link on surgery homepage

--- a/index.html
+++ b/index.html
@@ -121,9 +121,7 @@
     <section id="vvi-section">
         <a href="https://www.vvicm.com/" class="feature-link">
       <div class="feature-description">
-        The Vein & Vascular Institute is housed within the Surgery Center of York Road 
-        and offers comprehensive treatment of all facets of vascular disease. Click to 
-        learn more about the Surgery Center.
+        The Vein & Vascular Institute of Central Maryland offers comprehensive treatment of all facets of vascular disease and is housed within the same facility as the Surgery Center. Click here to learn more about VVICM.
       </div>
       <div class="feature-button">
         <img id="vvi-logo" src="./img/logos/vvi-logo.png" alt="Vein &amp; Vascular Institute of Central Maryland">
